# course-project-psuti

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py
k8s/: deployment.yaml  secret.yaml  service.yaml
project/: Dockerfile  main.py  pyproject.toml  requirements.txt
project/app/api/v1/: __init__.py  clients.py  parking.py  parking_sessions.py  payments.py  references.py  reports.py  tariffs.py  vehicles.py
project/app/core/: config.py  db.py
project/app/models/: __init__.py  clients.py  parking_session.py  parking_space.py  payment_method.py  payments.py  tariff.py  vehicle.py  vehicle_type.py  vehicles.py
project/app/modules/clients/: schemas.py  utils.py  views.py
project/app/modules/parking/: schemas.py  utils.py  views.py
project/app/modules/payments/: schemas.py  utils.py  views.py
project/app/modules/references/: schemas.py  views.py
project/app/modules/reports/: schemas.py  utils.py  views.py
project/app/modules/vehicles/: schemas.py  utils.py  views.py
project/migrations/: env.py
project/migrations/versions/: 3d4649c4556b_initial_tables.py  4a5b6c7d8e9f_seed_vehicle_types.py  5b6c7d8e9f0a_seed_payment_methods.py
project/static/css/: style.css
project/static/js/: app.js
project/templates/: index.html
server/: alembic.ini  docker-compose.yml  requirements.txt
server/app/core/: config.py  db.py
server/migrations/: env.py  script.py.mako
